--- a/packages/website/src/styles/_button.scss
+++ b/packages/website/src/styles/_button.scss
@@ -77,7 +77,6 @@ $orange: #cd6f00;
       flex: 1;
       flex-basis: 0;
       min-width: auto;
-      white-space: pre;
     }
 
     &.left {   justify-content: flex-start; }
